<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".HomeFragment">
    <ImageView
        android:id="@+id/catLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/cat"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cat_on_pc_image" />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/fredoka_one"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="40sp"
       android:layout_gravity="center"
        android:layout_marginBottom="5dp"
     />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="@string/this_a_very_simple_feedback_app"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/writeFeedback"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingHorizontal="20dp"
        android:textAllCaps="false"
        android:text="@string/write_a_feedback"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/rounded_text_field_blue"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/viewAllFeedbacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_feedbacks"
        android:textSize="18sp"
        android:layout_gravity="center"/>
</LinearLayout>
