<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".JokeFragment">

    <ImageView
        android:id="@+id/chuckBaner"
        android:src="@drawable/chuck_norris"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:contentDescription="@string/chuck_norris_baner" />
    <TextView
        android:id="@+id/randomJoke"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/random_joke_text"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/generateRandomJoke"
        android:layout_height="90dp"
        android:layout_width="90dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:lineSpacingExtra="5dp"
        android:textSize="13sp"
        android:padding="0dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/random_joke"
        />


</LinearLayout>